// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ECL - Icon Branded - icon facebook renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--facebook"
  />
</svg>
`;

exports[`ECL - Icon Branded - icon instagram renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--instagram"
  />
</svg>
`;

exports[`ECL - Icon Branded - icon linkedin renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--linkedin"
  />
</svg>
`;

exports[`ECL - Icon Branded - icon pinterest renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--pinterest"
  />
</svg>
`;

exports[`ECL - Icon Branded - icon rss renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--rss"
  />
</svg>
`;

exports[`ECL - Icon Branded - icon skype renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--skype"
  />
</svg>
`;

exports[`ECL - Icon Branded - icon twitter renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--twitter"
  />
</svg>
`;

exports[`ECL - Icon Branded - icon youtube renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#branded--youtube"
  />
</svg>
`;

exports[`ECL - Icon General - icon audio renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--audio"
  />
</svg>
`;

exports[`ECL - Icon General - icon book renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--book"
  />
</svg>
`;

exports[`ECL - Icon General - icon calendar renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--calendar"
  />
</svg>
`;

exports[`ECL - Icon General - icon copy renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--copy"
  />
</svg>
`;

exports[`ECL - Icon General - icon digital renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--digital"
  />
</svg>
`;

exports[`ECL - Icon General - icon edit renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--edit"
  />
</svg>
`;

exports[`ECL - Icon General - icon faq renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--faq"
  />
</svg>
`;

exports[`ECL - Icon General - icon feedback renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--feedback"
  />
</svg>
`;

exports[`ECL - Icon General - icon file renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--file"
  />
</svg>
`;

exports[`ECL - Icon General - icon gear renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--gear"
  />
</svg>
`;

exports[`ECL - Icon General - icon generic-lang renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--generic-lang"
  />
</svg>
`;

exports[`ECL - Icon General - icon global renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--global"
  />
</svg>
`;

exports[`ECL - Icon General - icon growth renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--growth"
  />
</svg>
`;

exports[`ECL - Icon General - icon hamburger renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--hamburger"
  />
</svg>
`;

exports[`ECL - Icon General - icon image renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--image"
  />
</svg>
`;

exports[`ECL - Icon General - icon infographic renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--infographic"
  />
</svg>
`;

exports[`ECL - Icon General - icon language renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--language"
  />
</svg>
`;

exports[`ECL - Icon General - icon livestreaming renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--livestreaming"
  />
</svg>
`;

exports[`ECL - Icon General - icon location renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--location"
  />
</svg>
`;

exports[`ECL - Icon General - icon log-in renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--log-in"
  />
</svg>
`;

exports[`ECL - Icon General - icon logged-in renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--logged-in"
  />
</svg>
`;

exports[`ECL - Icon General - icon multiple-files renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--multiple-files"
  />
</svg>
`;

exports[`ECL - Icon General - icon organigram renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--organigram"
  />
</svg>
`;

exports[`ECL - Icon General - icon print renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--print"
  />
</svg>
`;

exports[`ECL - Icon General - icon regulation renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--regulation"
  />
</svg>
`;

exports[`ECL - Icon General - icon search renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--search"
  />
</svg>
`;

exports[`ECL - Icon General - icon share renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--share"
  />
</svg>
`;

exports[`ECL - Icon General - icon spinner renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--spinner"
  />
</svg>
`;

exports[`ECL - Icon General - icon spreadsheet renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--spreadsheet"
  />
</svg>
`;

exports[`ECL - Icon General - icon tag renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--tag"
  />
</svg>
`;

exports[`ECL - Icon General - icon video renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--video"
  />
</svg>
`;

exports[`ECL - Icon Generic tests - Any icon renders correctly with extra attributes 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--audio"
  />
</svg>
`;

exports[`ECL - Icon Generic tests - Any icon renders correctly with extra class names 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m custom-class custom-class--test"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--audio"
  />
</svg>
`;

exports[`ECL - Icon Notifications - icon error renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#notifications--error"
  />
</svg>
`;

exports[`ECL - Icon Notifications - icon information renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#notifications--information"
  />
</svg>
`;

exports[`ECL - Icon Notifications - icon success renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#notifications--success"
  />
</svg>
`;

exports[`ECL - Icon Notifications - icon warning renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#notifications--warning"
  />
</svg>
`;

exports[`ECL - Icon UI - icon check renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--check"
  />
</svg>
`;

exports[`ECL - Icon UI - icon check-filled renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--check-filled"
  />
</svg>
`;

exports[`ECL - Icon UI - icon close renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--close"
  />
</svg>
`;

exports[`ECL - Icon UI - icon close-filled renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--close-filled"
  />
</svg>
`;

exports[`ECL - Icon UI - icon corner-arrow renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--corner-arrow"
  />
</svg>
`;

exports[`ECL - Icon UI - icon download renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--download"
  />
</svg>
`;

exports[`ECL - Icon UI - icon external renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--external"
  />
</svg>
`;

exports[`ECL - Icon UI - icon fullscreen renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--fullscreen"
  />
</svg>
`;

exports[`ECL - Icon UI - icon minus renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--minus"
  />
</svg>
`;

exports[`ECL - Icon UI - icon plus renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--plus"
  />
</svg>
`;

exports[`ECL - Icon UI - icon rounded-arrow renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--rounded-arrow"
  />
</svg>
`;

exports[`ECL - Icon UI - icon solid-arrow renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="ecl-icon ecl-icon--m"
  focusable="false"
>
  <use
    xlink:href="/icons.svg#general--solid-arrow"
  />
</svg>
`;
